# sparkforge

./: .coverage 2  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  API_REFERENCE.md  BUG_REPORTS_SUMMARY_3.18.7.md  BUG_REPORTS_SUMMARY_3.19.0.md  CHANGELOG.md  COMPLETE_FAILURE_ANALYSIS.md  CONCURENT_TESTING.md  DECISION_TREES.md  DOCUMENTATION_UPDATES.md  ENVIRONMENT_INFO.md  ERROR_HANDLING_GUIDE.md  FAILED_TESTS_INVESTIGATION.md  FAILURE_ANALYSIS_3.18.7.md  GETTING_STARTED.md  GITHUB_ISSUE_CONTENT.md  IMMEDIATE_NEXT_STEPS.md  INVESTIGATION_3.18.7.md  INVESTIGATION_RESULTS.md  INVESTIGATION_SUMMARY.md  LICENSE_HEADER.txt  MANIFEST.in  MOCK_SPARK_CTE_FIX_PLAN.md  MOCK_SPARK_IMPROVEMENTS.md  Makefile  NEXT_PHASE_DEVELOPMENT_PLAN.md  NEXT_STEPS_PLAN.md  PARALLEL_EXECUTION_IMPLEMENTATION.md  PLAN_FIX_SCHEMA_EVOLUTION_INCREMENTAL.md  POWERPOINT_BUILD_GUIDE.md  PRESENTATION_README.md  PROGRESSIVE_EXAMPLES.md  PYSPARK_COMPATIBILITY_INVESTIGATION.md  Pipeline_Builder_Databricks_Presentation.pptx  QUICKSTART.md  QUICK_REFERENCE.md  (+110 more)
abstracts/: builder.py  engine.py  rules.py  runner.py  source.py  step.py  transformer.py
builder_tests/: MOCK_SPARK_IMPROVEMENT_PLAN.md  README.md  __init__.py  conftest.py  run_tests.py  test_logwriter_integration.py  test_pipeline_builder_integration.py  test_pipeline_combinations.py  test_table_total_rows_metric.py
docs/: Architecture.md  COMPREHENSIVE_TROUBLESHOOTING_GUIDE.md  COMPREHENSIVE_USER_GUIDE.md  DECOUPLING_PYSPARK_PLAN.md  DEPLOYMENT_GUIDE.md  DIRECTORY_STRUCTURE_ANALYSIS.md  ENGINE_AGNOSTIC_TESTS.md  ENHANCED_API_REFERENCE.md  FAQ.md  IMAGE_GUIDE.md  LEADERSHIP_OVERVIEW.md  MOCK_SPARK_AGGREGATED_DF_CATALOG_REGISTRATION_PLAN.md  MOCK_SPARK_CATALOG_SYNC_IMPROVEMENT_PLAN.md  MOCK_SPARK_COMPATIBILITY_RECOMMENDATIONS.md  MOCK_SPARK_DROP_IN_REPLACEMENT_PLAN.md  MOCK_SPARK_FUTURE_IMPROVEMENTS.md  MOCK_SPARK_IMPROVEMENTS.md  MOCK_SPARK_IMPROVEMENT_PLAN.md  MOCK_SPARK_LIMITATIONS.md  MOCK_SPARK_LIMITATIONS_DOCUMENTATION_PLAN.md  MOCK_SPARK_MISSED_ISSUES.md  MOCK_SPARK_PYSPARK_COMPATIBILITY_IMPROVEMENT_PLAN.md  MOCK_SPARK_PYSPARK_DROP_IN_REPLACEMENT_GUIDE.md  MOCK_SPARK_QUICK_REFERENCE.md  MOCK_SPARK_REMAINING_IMPROVEMENTS.md  MOCK_SPARK_SCHEMA_COMPATIBILITY_IMPROVEMENT_PLAN.md  MOCK_SPARK_TEST_RUN_REPORT.md  MOCK_SPARK_THREADING_FIX_PLAN.md  MOCK_SPARK_UPGRADE_PLAN.md  MOCK_SPARK_UPSTREAM_PLAN.md  MOCK_VS_REAL_SPARK_DIFFERENCES.md  PERFORMANCE_TUNING_GUIDE.md  POWERPOINT_SLIDE_CONTENT.md  PRESENTATION.md  PRESENTATION_DATABRICKS.md  PRESENTATION_POWERPOINT_OUTLINE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PYSPARK_TEST_FAILURE_ANALYSIS_REPORT.md  Pipeline_Builder_Databricks_Presentation_HTML.pptx  QUICKSTART.md  (+84 more)
examples/: README.md  auto_infer_source_bronze_example.py  auto_infer_source_bronze_simple.py  basic_pipeline.py  bronze_no_datetime_example.py  hello_world.py  iot_sensor_pipeline.py  multi_schema_pipeline.py  quick_start.py  step_by_step_execution.py
features/: README.md  behave.ini  data_validation.feature  dependency_analysis.feature  environment.py  error_handling.feature  example.feature  performance_monitoring.feature  pipeline_execution.feature  requirements.txt  run_tests.py  writer_logging.feature
interfaces/: builder.py  report.py  rules.py  runner.py  sources.py
mock_spark/: __init__.py  dataframe.py  errors.py  functions.py  session.py  storage.py  types.py
notebooks/: 01_hello_world.ipynb  02_v1.2.0_logging_and_parallel_execution.ipynb  README.md  pipeline_builder_v0.9.0.ipynb  pipeline_builder_v0.9.1.ipynb  pipeline_builder_v2.1.2.ipynb  pipeline_builder_v2.2.0.ipynb  pipeline_builder_v2.2.0_executed.ipynb  pipeline_builder_v2.3.0.ipynb  pipeline_builder_v2.3.0_executed.ipynb  pipeline_builder_v2.4.0.executed.ipynb  pipeline_builder_v2.4.0.ipynb  pipeline_builder_v2.5.2.ipynb  pipeline_builder_v2.8.0.executed.ipynb  pipeline_builder_v2.8.0.ipynb  pipeline_builder_v2.9.0.ipynb  pipeline_builder_v2.9.0_executed.ipynb  rank_builder_2.8 (1).ipynb  run_rank_builder_2.8 (1).ipynb
pipeline_builder/: __init__.py  compat.py  errors.py  execution.py  logging.py  reporting.py  table_operations.py
pipeline_builder_base/: README.md  __init__.py  errors.py  logging.py  reporting.py
pipeline_builder_docs/: PRESENTATION_README.md  README.md
reproduce_sparkless_bugs/: bug_1_datetime_validation.py  bug_2_datetime_validation_streaming.py  bug_3_validation_on_datetime.py  bug_4_column_reference_after_transform.py  bug_5_column_rename_validation_mismatch.py
reproduce_sparkless_bugs_3.18.0/: ISSUE_DESCRIPTION.md  bug_1_to_timestamp_returns_string.py  bug_2_to_timestamp_with_clean_column.py  (+1 more)
sql_pipeline_builder/: README.md  __init__.py  compat.py  execution.py  pyproject.toml  table_operations.py  types.py
sql_pipeline_builder/engine/: __init__.py  sql_engine.py
sql_pipeline_builder/models/: __init__.py  steps.py
sql_pipeline_builder/pipeline/: __init__.py  builder.py  runner.py
sql_pipeline_builder/tests/: __init__.py  test_full_pipeline.py  test_sql_pipeline_builder.py  test_validation_and_table_ops.py
sql_pipeline_builder/validation/: __init__.py  sql_validation.py
sql_pipeline_builder/writer/: __init__.py  sql_storage.py
src/pipeline_builder_base/: README.md  __init__.py  errors.py  logging.py  pyproject.toml  reporting.py
src/pipeline_builder_base/builder/: __init__.py  base_builder.py  helpers.py  step_classifier.py
src/pipeline_builder_base/config/: __init__.py  factories.py  validators.py
src/pipeline_builder_base/dependencies/: __init__.py  analyzer.py  graph.py
src/pipeline_builder_base/errors/: __init__.py  context.py
src/pipeline_builder_base/models/: __init__.py  base.py  enums.py  pipeline.py  steps.py  types.py
src/pipeline_builder_base/runner/: __init__.py  base_runner.py  execution_helpers.py
src/pipeline_builder_base/steps/: __init__.py  manager.py  utils.py
src/pipeline_builder_base/validation/: __init__.py  pipeline_validator.py  protocols.py  step_validator.py  utils.py
src/pipeline_builder_base/writer/: __init__.py  base.py  exceptions.py  models.py
(+725 files in other folders)
