[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-builder-base"
version = "2.2.0"
description = "Shared base package for pipeline builders (Spark and SQL)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Odos Matthews", email = "odosmatthews@gmail.com"}
]
maintainers = [
    {name = "Odos Matthews", email = "odosmatthews@gmail.com"}
]
keywords = [
    "pipeline", "etl", "data-engineering", "data-lakehouse",
    "bronze-silver-gold", "medallion-architecture"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/eddiethedean/sparkforge"
Documentation = "https://sparkforge.readthedocs.io/"
Repository = "https://github.com/eddiethedean/sparkforge"
"Bug Tracker" = "https://github.com/eddiethedean/sparkforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_builder_base*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pipeline_builder_base"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP006",  # Use dict instead of Dict - disabled for Python 3.8 compatibility
    "UP007",  # Use X | Y instead of Union[X, Y] - disabled for Python 3.8 compatibility
    "UP045",  # Use X | None instead of Optional[X] - disabled for Python 3.8 compatibility
]

